# ocaml-ai-sdk

./: .gitignore  CLAUDE.md  ai-sdk-react.opam  dune-project  ocaml-ai-sdk.opam
bindings/ai-sdk-react/: ai_sdk_react.ml  ai_sdk_react.mli  dune  types.ml  types.mli  use_chat.ml  use_chat.mli  use_completion.ml  use_completion.mli
claude-agent-sdk/lib/: client.ml  dune  message.ml  message.mli  options.ml  options.mli  transport.ml  transport.mli  types.ml  types.mli
claude-agent-sdk/test/: dune  test_parse.ml
claude-agent-sdk/tool/: main.ml
docs/: UPSTREAM_INTEROP.md
docs/plans/: 2026-03-05-core-sdk-design.md  2026-03-05-core-sdk-implementation-plan.md  2026-03-06-ai-sdk-react-bindings-design.md  2026-03-06-missing-test-surface.md  2026-03-24-type-safe-json-refactoring.md  2026-03-25-output-api.md  2026-03-26-v2-roadmap.md  2026-03-27-e2e-melange-example-design.md  2026-03-27-tool-approval-workflow.md  2026-03-27-ui-message-stream-composition-design.md  2026-03-31-melange-bindings-dx-lessons.md
examples/: dune  thinking.ml
examples/ai-e2e/: abort_stop.mlx  basic_chat.mlx  build.js  chat_layout.mlx  chat_message.mlx  client_tools.mlx  completion.mlx  dune  file_attachments.mlx  index.html  main.mlx  package-lock.json  package.json  provider_context.ml  reasoning.mlx  retry_regenerate.mlx  router.ml  sidebar.mlx  structured_output.mlx  tool_approval.mlx  tool_use.mlx  web_search.mlx
examples/ai-e2e/server/: dune  main.ml
examples/chat_server/: app.jsx  build.js  client.jsx  dune  main.ml  package-lock.json  package.json  server.js
examples/custom_stream/: build.js  dune  main.ml  package.json  server.js
examples/custom_stream/frontend/: app.mlx  dune  main.mlx
examples/melange_chat/: app.mlx  build.js  dune  main.mlx  package-lock.json  package.json  server.js
frontend/: app.jsx
lib/ai_core/: ai_core.ml  ai_core.mli  core_tool.ml  core_tool.mli  dune  generate_text.ml  generate_text.mli  generate_text_result.ml  generate_text_result.mli  output.ml  output.mli  partial_json.ml  partial_json.mli  prompt_builder.ml  prompt_builder.mli  server_handler.ml  server_handler.mli  stream_text.ml  stream_text.mli  stream_text_result.ml  stream_text_result.mli  text_stream_part.ml  text_stream_part.mli  ui_message_chunk.ml  ui_message_chunk.mli  ui_message_stream.ml  ui_message_stream.mli  ui_message_stream_writer.ml  ui_message_stream_writer.mli
lib/ai_provider/: ai_provider.ml  ai_provider.mli  dune  finish_reason.ml  finish_reason.mli  generate_result.ml  generate_result.mli  language_model.ml  language_model.mli  middleware.ml  middleware.mli  mode.ml  mode.mli  prompt.ml  prompt.mli  provider.ml  provider.mli  provider_error.ml  sse.ml  sse.mli  tool.ml  tool.mli
lib/ai_provider_anthropic/: ai_provider_anthropic.ml  ai_provider_anthropic.mli  anthropic_api.ml  anthropic_api.mli  anthropic_error.ml  anthropic_error.mli  anthropic_model.ml  anthropic_model.mli  beta_headers.ml  cache_control.ml  cache_control.mli  config.ml  config.mli  convert_prompt.ml  convert_prompt.mli  convert_response.ml  convert_response.mli  convert_stream.ml  convert_stream.mli  convert_tools.ml  convert_tools.mli  convert_usage.ml  convert_usage.mli  dune  sse.ml  sse.mli
lib/ai_provider_openai/: ai_provider_openai.ml  ai_provider_openai.mli  config.ml  config.mli  convert_prompt.ml  convert_prompt.mli  convert_response.ml  convert_response.mli  convert_stream.ml  convert_stream.mli  convert_tools.ml  convert_tools.mli  convert_usage.ml  convert_usage.mli  dune  model_catalog.ml  model_catalog.mli  openai_api.ml  openai_api.mli  openai_error.ml  openai_error.mli  openai_model.ml  openai_model.mli  openai_options.ml  openai_options.mli  sse.mli
lib/ai_provider_openrouter/: ai_provider_openrouter.ml  ai_provider_openrouter.mli  config.ml  config.mli  convert_prompt.ml  convert_prompt.mli  convert_response.ml  convert_response.mli  convert_stream.ml  convert_stream.mli  convert_tools.ml  convert_tools.mli  convert_usage.ml  convert_usage.mli  dune  model_catalog.ml  model_catalog.mli  openrouter_api.ml  openrouter_api.mli  openrouter_error.ml  openrouter_error.mli  openrouter_model.ml  openrouter_model.mli  openrouter_options.ml  openrouter_options.mli  sse.ml
test/ai_core/: dune  test_core_tool.ml  test_core_types.ml  test_e2e.ml  test_generate_text.ml  test_output.ml  test_partial_json.ml  test_prompt_builder.ml  test_server_handler.ml  test_stream_text.ml  test_to_ui_stream.ml  test_ui_message_chunk.ml  test_ui_message_stream.ml  test_ui_message_stream_writer.ml
test/ai_provider/: dune  test_foundation_types.ml  test_prompt.ml
test/ai_provider_anthropic/: dune  test_anthropic_model.ml  test_anthropic_types.ml  test_api.ml  test_config_catalog.ml  test_convert_prompt.ml  test_convert_response.ml  test_convert_stream.ml  test_convert_tools.ml  test_e2e.ml  test_factory.ml  test_sse.ml
test/ai_provider_openai/: dune  test_api.ml  test_config_catalog.ml  test_convert_prompt.ml  test_convert_response.ml  test_convert_stream.ml  test_convert_tools.ml  test_e2e.ml  test_factory.ml  test_openai_model.ml  test_openai_types.ml  test_sse.ml
test/ai_provider_openrouter/: dune  test_config.ml  test_convert_prompt.ml  test_convert_response.ml  test_convert_stream.ml  test_convert_tools.ml  test_convert_usage.ml  test_e2e.ml  test_factory.ml  test_openrouter_model.ml
