(melange.emit
 (target output)
 (alias ai_e2e)
 (libraries ai_sdk_react reason-react)
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (module_systems es6))

(rule
 (alias bundle)
 (deps
  (alias ai_e2e))
 (action
  (bash
   "cd \"$(git rev-parse --show-toplevel)/examples/ai-e2e\" && node build.js")))
